--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,14 @@
         </div>
     </div>
 
+    <div id="cart-container" class="cart-container">
+        <h2>Carrito de Compras</h2>
+        <div id="cart-items" class="cart-items"></div>
+        <div class="cart-summary">
+            <p>Total: $<span id="cart-total">0.00</span></p>
+            <button id="clear-cart" class="btn btn-danger">Vaciar Carrito</button>
+        </div>
+    </div>
 
     <div id="main-section" class="section" style="display: none;">
         <header>
