--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
             <div id="cart-items" class="cart-items"></div>
             <div class="cart-summary">
                 <p>Total: $<span id="cart-total">0.00</span></p>
-                <button id="clear-cart" class="btn btn-danger">Vaciar Carrito</button>
+                <button id="clear-cart" class="btn btn-danger">Realizar Compra</button>
             </div>
         </div>
 
